# vad

./: .gitignore  CMakeLists.txt  README.md
.SpaceVim.d/: init.toml
.SpaceVim.d/autoload/: myspacevim.vim
api/: sohnvad.h
example/: CMakeLists.txt  main.cpp
include/: fast-noise-psd-tracking.h  hamming.h  log-probability.h  ndeque.h  spectral-subtraction.h  vad.h
src/: CMakeLists.txt  fast-noise-psd-tracking.cpp  hamming.cpp  sohnvad.cpp  spectral-subtraction.cpp  vad.cpp
